last bit of parameter uncertainty

--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -179,7 +179,7 @@ In another example, \citet{bielicki_hydrogeolgic_2015} defined play fairways in 
 
 In all studies conducted thus far for the Southwest New Mexico study area, geothermal favorability models provide a deterministic view of problem. This thesis reinvestigates the NM study area with focused attention on the variety of uncertainties involved in a machine learning approach, as well as how those uncertainties can impact the final model results and the choices made by E\&P decision-makers.
 
-\subsection{Uncertainties}
+\subsection{Uncertainties} \label{ch2:uncertainty}
 
 Machine learning methods typically create mathematical models of a system under investigation based on empirical evidence rather than a formalized physics-based approach. Three main types of uncertainty impact these models, and each should be assessed when weighing model results for project decisions in either exploration or production scenarios. 
 
