--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,126 @@
 
+@article{dillon_tensorflow_2017,
+	title = {Tensorflow distributions},
+	journal = {arXiv preprint arXiv:1711.10604},
+	author = {Dillon, Joshua V and Langmore, Ian and Tran, Dustin and Brevdo, Eugene and Vasudevan, Srinivas and Moore, Dave and Patton, Brian and Alemi, Alex and Hoffman, Matt and Saurous, Rif A},
+	year = {2017},
+}
+
+@misc{webster_probabilistic_2021,
+	type = {e-learning},
+	title = {Probabilistic layers and {Bayesian} neural networks},
+	shorttitle = {Bayes by backprop},
+	url = {https://www.coursera.org/learn/probabilistic-deep-learning-with-tensorflow2/},
+	journal = {Probabilistic Deep Learning with TensorFlow 2},
+	author = {Webster, Kevin},
+	year = {2021},
+}
+
+@inproceedings{blundell_weight_2015,
+	title = {Weight uncertainty in neural network},
+	publisher = {PMLR},
+	author = {Blundell, Charles and Cornebise, Julien and Kavukcuoglu, Koray and Wierstra, Daan},
+	year = {2015},
+	pages = {1613--1622},
+}
+
+@misc{beaudette_accuracy_2020,
+	title = {Accuracy and {Uncertainty} for {Categorical} {Predictions}},
+	url = {http://ncss-tech.github.io/stats_for_soil_survey/chapters/9_uncertainty/class-accuracy-uncertainty.html},
+	journal = {Statistics for Soil Survey},
+	author = {Beaudette, D.E.},
+	month = feb,
+	year = {2020},
+}
+
+@article{shannon_mathematical_1948,
+	title = {A mathematical theory of communication},
+	volume = {27},
+	issn = {0005-8580},
+	number = {3},
+	journal = {The Bell system technical journal},
+	author = {Shannon, Claude Elwood},
+	year = {1948},
+	note = {Publisher: Nokia Bell Labs},
+	pages = {379--423},
+}
+
+@article{burrough_continuous_1997,
+	title = {Continuous classification in soil survey: spatial correlation, confusion and boundaries},
+	volume = {77},
+	issn = {0016-7061},
+	number = {2-4},
+	journal = {Geoderma},
+	author = {Burrough, Peter A and van Gaans, Pauline FM and Hootsmans, R},
+	year = {1997},
+	note = {Publisher: Elsevier},
+	pages = {115--135},
+}
+
+@article{brier_verification_1950,
+	title = {Verification of forecasts expressed in terms of probability},
+	volume = {78},
+	issn = {1520-0493},
+	number = {1},
+	journal = {Monthly weather review},
+	author = {Brier, Glenn W},
+	year = {1950},
+	pages = {1--3},
+}
+
+@article{cohen_coefficient_1960,
+	title = {A coefficient of agreement for nominal scales},
+	volume = {20},
+	issn = {0013-1644},
+	number = {1},
+	journal = {Educational and psychological measurement},
+	author = {Cohen, Jacob},
+	year = {1960},
+	note = {Publisher: Sage Publications Sage CA: Thousand Oaks, CA},
+	pages = {37--46},
+}
+
+@article{ma_tau_1995,
+	title = {Tau coefficients for accuracy assessment of classification of remote sensing data},
+	volume = {61},
+	issn = {0099-1112},
+	number = {4},
+	journal = {Photogrammetric Engineering and Remote Sensing},
+	author = {Ma, Zhenkui and Redmond, Roland L},
+	year = {1995},
+	note = {Publisher: [Falls Church, Va.] American Society of Photogrammetry.},
+	pages = {435--439},
+}
+
+@article{rossiter_accounting_2017,
+	title = {Accounting for taxonomic distance in accuracy assessment of soil class predictions},
+	volume = {292},
+	issn = {0016-7061},
+	journal = {Geoderma},
+	author = {Rossiter, David G and Zeng, Rong and Zhang, Gan-Lin},
+	year = {2017},
+	note = {Publisher: Elsevier},
+	pages = {118--127},
+}
+
+@article{hand_measuring_2009,
+	title = {Measuring classifier performance: a coherent alternative to the area under the {ROC} curve},
+	volume = {77},
+	issn = {1573-0565},
+	shorttitle = {Measuring classifier performance},
+	url = {https://doi.org/10.1007/s10994-009-5119-5},
+	doi = {10.1007/s10994-009-5119-5},
+	abstract = {The area under the ROC curve (AUC) is a very widely used measure of performance for classification and diagnostic rules. It has the appealing property of being objective, requiring no subjective input from the user. On the other hand, the AUC has disadvantages, some of which are well known. For example, the AUC can give potentially misleading results if ROC curves cross. However, the AUC also has a much more serious deficiency, and one which appears not to have been previously recognised. This is that it is fundamentally incoherent in terms of misclassification costs: the AUC uses different misclassification cost distributions for different classifiers. This means that using the AUC is equivalent to using different metrics to evaluate different classification rules. It is equivalent to saying that, using one classifier, misclassifying a class 1 point is p times as serious as misclassifying a class 0 point, but, using another classifier, misclassifying a class 1 point is P times as serious, where p≠P. This is nonsensical because the relative severities of different kinds of misclassifications of individual points is a property of the problem, not the classifiers which happen to have been chosen. This property is explored in detail, and a simple valid alternative to the AUC is proposed.},
+	language = {en},
+	number = {1},
+	urldate = {2021-07-01},
+	journal = {Machine Learning},
+	author = {Hand, David J.},
+	month = oct,
+	year = {2009},
+	pages = {103--123},
+}
+
 @misc{brownlee_how_2019,
 	title = {How to {Control} the {Stability} of {Training} {Neural} {Networks} {With} the {Batch} {Size}},
 	url = {https://machinelearningmastery.com/how-to-control-the-speed-and-stability-of-training-neural-networks-with-gradient-descent-batch-size/},
