--- a/templates/chap5.tex
+++ b/templates/chap5.tex
@@ -2,9 +2,9 @@
 
 \section{Data Modeling}
 
-\begin{wrapfigure}{R}{0.45\linewidth}
+\begin{wrapfigure}{R}{0.45\textwidth}
 \centering
-\includegraphics[scale=.6]{templates/images/Flow-Modeling.png}
+\includegraphics[width=.35\textwidth]{templates/images/Flow-Modeling.png}
 \singlespacing
 \caption[Modeling workflow]{Workflow for predicting the class of geothermal gradient across the southwestern NM study area using a variety of common machine learning methods.}
 \label{fig:model_flow}
@@ -54,27 +54,27 @@ For imbalanced data sets, micro will indicate better performance than macro due 
 
 \subsubsection{Binary Formulation} 
 
-The classic \acrlong{lr} (\acrshort{lr}) model is a binary classifier that predicts one of two labels based on the input data. LR frames the problem as a linear combination of the input observations \citep[p.\ 369]{bertsimas_analytics_2016}:
+The classic \acrlong{lr} (\acrshort{lr}) model is a binary classifier that predicts one of two labels based on the input data. Linear regression treats the problem as a linear combination of the input observations \citep[p.\ 369]{bertsimas_analytics_2016}:
 
 \begin{equation}
-\label{eq:logreg_form}
-    \hat{y} = {\bf{w^Tx}} = w_0 + w_1 * x_1 + w_2 * x_2 \ldots + w_n * x_n 
+\label{eq:linreg_form}
+    \hat{y} = {\bf{w^Tx}} = w_0 + w_1 \cdot x_1 + w_2 \cdot x_2 + \ldots + w_n \cdot x_n 
 \end{equation}
 
-Where $x_i$ are the feature observations, $w_i$ are coefficients or weights for those features, and $y_i$ is a weighted sum. Solving for the weights in this equation ($w_i$) requires an iterative optimization procedure like gradient descent. This procedure is framed as a minimization problem by defining a cost function ($J(\Theta)$) based on the negative log likelihood \citep{ng_logistic_2011}:
+Where $x_i$ are the feature observations, $w_i$ are coefficients or weights for those features, and $\hat{y}$ is the weighted sum. Logistic regression adjusts the problem such that predictions define the probability of belonging to class 1. This is done by using a non-linear logistic response function: 
+
+\begin{equation}
+\label{eq:sigmoid}
+h_{\theta}(x) = \frac{1}{(1+e^{-\hat{y}})} = \frac{1}{(1+e^{-W^TX})}
+\end{equation}
+
+Equation \ref{eq:sigmoid}, also known as the \textit{sigmoid} function, converts the weighted sum from equation \ref{eq:linreg_form} to values between 0 and 1 \citep[p.\ 369]{bertsimas_analytics_2016}. Solving for the weights in this equation ($w_i$) requires an iterative optimization procedure like gradient descent. This procedure minimizes a cost function ($J(\Theta)$) based on the negative log likelihood \citep{ng_logistic_2011}:
 
 \begin{equation}
 \label{eq:logreg_cost}
 \begin{aligned}
         J(\Theta) &= -\frac{1}{m} \sum_{i=1}^{m}{\text{Cost}(h_{\theta}(x_i),y_i)} \\ &= -\frac{1}{m}\sum_{i=1}^{m}{(y_i*\text{log}({h_{\theta}(x_i)})+(1-y_i)*\text{log}(1-h_{\theta}(x_i)))}
 \end{aligned}
-\end{equation}
-
-Here, $h_{\theta}(x)$ is the sigmoid function, which converts the weighted sum from equation \ref{eq:logreg_form} to something close to a binary 0 or 1 value \citep[p.\ 369]{bertsimas_analytics_2016}:
-
-\begin{equation}
-\label{eq:sigmoid}
-h_{\theta}(x) = \frac{1}{(1+e^{-\hat{y}})} = \frac{1}{(1+e^{-W^TX})}
 \end{equation}
 
 Regularization is added to logistic regression to avoid overfitting, specifically by penalizing the sum of the squared weights (L2-regularization). A constant ($\lambda$) determines the trade-off of influence between the magnitude of the weights and negative log likelihood in the minimization \citep{ng_regularization_2011}.
@@ -84,7 +84,7 @@ Regularization is added to logistic regression to avoid overfitting, specificall
     regularized\,J(\Theta) = -\frac{1}{m}\sum_{i=1}^{m}{\text{Cost}(h_{\theta}(x_i),y_i) + \frac{\lambda}{2m}\sum_{j=1}^{n}{w_j^2}}
 \end{equation}
 
-The scikit-learn \textit{LogisticRegression} function uses a constant C applied to the negative log likelihood term, which acts like the inverse of $\lambda$. Larger values of C result in less regularization. Scikit defaults to using a value of C=1.0 \citep{scikit-learn_1111_2021}.
+The scikit-learn \textit{LogisticRegression} function uses a constant C applied to the negative log likelihood term, which acts like the inverse of $\lambda$. Larger values of C result in less regularization \citep{scikit-learn_1111_2021}.
 
 \subsubsection{Multi-Class Heuristics} \label{ch5:multi_log_reg}
 
@@ -132,9 +132,9 @@ AUC values calculated on test subsets indicate WDS4 has the best out-of-sample p
 \end{figure}
 
 \subsubsection{Feature Selection} \label{ch5:logreg_rfe}
-Logistic regression models assume a linear relationship between predictors and the response variable, but adding more predictors will not necessarily improve the model. Feature selection can lead to simpler models with the same predictive power but reduced risk of collinearity, which is important when managing data from naturally integrated earth systems. 
+By consequence of Equation \ref{eq:sigmoid}, logistic regression assumes a linear relationship between the weighted sum of independent predictors and the log-odds, i.e., $\log(\frac{P(y=1)}{1-P(y=1)})$. However, including all possible predictors will not necessarily improve the model. Feature selection can lead to simpler models with the same predictive power but reduced risk of collinearity, which is important when managing data from naturally integrated earth systems. 
 
-One method for selecting the number of features to keep involves an iterative process called \acrlong{rfe} (\acrshort{rfe}) (Brownlee, 2020c; scikit-learn, 2021d). The concept is relatively simple: RFE recursively selects and removes the feature with the smallest coefficient in the logistic regression model, then refits the data and repeats until a user-defined number of features is reached.  A plot of AUC vs. number of features can be constructed by looping over different feature limits, where the logistic regression model is fit on the training subset and evaluated on the validation subset (Figure \ref{fig:logreg_rfe}). Based on the plot, a local peak in AUC occurs when 18 features are used. Adding the remaining features results in small gains in AUC, but with diminishing returns for six additional features of complexity. Using this threshold, the data layers removed from the model include: DEM Gradient, Gravity Gradient, Magnetic Anomaly, Magnetic Anomaly Gradient, Water Table Depth, and Average Precipitation. Note that Average Precipitation appears higher on the coefficients plot (Figure \ref{fig:logreg_coefs}) than other features that were not removed. Since RFE iteratively removes predictors and refits the model, relative coefficients can change, particularly if there was collinearity with a removed variable.
+One method for selecting the features to keep involves an iterative process called \acrlong{rfe} (\acrshort{rfe}) (Brownlee, 2020c; scikit-learn, 2021d). The concept is relatively simple: RFE recursively selects and removes the feature with the smallest coefficient in the logistic regression model, then refits the data and repeats until a user-defined number of features is reached.  A plot of AUC vs. number of features can be constructed by looping over different feature limits, where the logistic regression model is fit on the training subset and evaluated on the validation subset (Figure \ref{fig:logreg_rfe}). Based on the plot, a local peak in AUC occurs when 18 features are used. Adding the remaining features results in small gains in AUC, but with diminishing returns for six additional features of complexity. Using this threshold, the data layers removed from the model include: DEM Gradient, Gravity Gradient, Magnetic Anomaly, Magnetic Anomaly Gradient, Water Table Depth, and Average Precipitation. Note that Average Precipitation appears higher on the coefficients plot (Figure \ref{fig:logreg_coefs}) than other features that were not removed. Since RFE iteratively removes predictors and refits the model, relative coefficients can change, particularly if there was collinearity with a removed variable.
 
 \begin{figure}[!htp]
 \centering
@@ -143,6 +143,8 @@ One method for selecting the number of features to keep involves an iterative pr
 \caption[Logistic regression feature selection]{Logistic regression feature selection using RFE and WDS4. Red dashed line indicates the chosen number of features to use for the LR model.}
 \label{fig:logreg_rfe}
 \end{figure}
+
+\newpage 
 \subsubsection{Optimized Model Results}\label{ch5:logreg_results}
 
 \begin{wrapfigure}{R}{0.50\linewidth}
@@ -184,16 +186,19 @@ There are three metrics that can play a role in evaluating the discriminating qu
 
 \begin{itemize}[itemsep=2pt]
     \item \textbf{Classification error rate}: the proportion of training samples that do not match the dominant class associated with a leaf node \citep[p. 312]{james_introduction_2013}.
-    \begin{equation} \label{eq:error_rate}
+    \begin{equation}
+    \label{eq:error_rate}
         E = 1 - \max_k(\hat{p}_{mk})
     \end{equation}
     where $m$ is the segment of the data associated with a node, $k$ is the class, and $\hat{p}_{mk}$ is the fraction of all training observations in $m$ that are of class $k$. 
     \item \textbf{Gini index}: measures variance across all k classes. Gini is sometimes known as a purity measurement because low values correspond with a strongly dominant class \citep[p. 312]{james_introduction_2013}.
     \begin{equation}
+    \label{eq:gini}
         G = \sum_{k=1}^{K}{\hat{p}_{mk}(1-\hat{p}_{mk})}
     \end{equation}
     \item \textbf{Entropy}: An alternative form of purity measure, which also shows low values when the proportion of one class dominates the others within a node \citep[p. 312]{james_introduction_2013}.
     \begin{equation}
+    \label{eq:entropy}
         D = -\sum_{k=1}^{K}{\hat{p}_{mk}* \text{log}(\hat{p}_{mk})}
     \end{equation}
 \end{itemize}
@@ -317,7 +322,7 @@ Note that if the random seed (currently fixed at 43 for solution repeatability) 
 \begin{figure}[!htp]
 \centering
 \includegraphics[height=0.85\textheight,keepaspectratio]{templates/images/Figure-DT_viz_portrait.pdf}
-\caption[Decision tree visualization]{Decision tree visualization for the final decision tree model.Nodes are noted by predictor labels with their decision threshold. Bubbles illustrate the final distribution of classes in a leaf node, sized by number of observations. The majority class determines the classification label.}
+\caption[Decision tree visualization]{Decision tree visualization for the final decision tree model. Nodes are noted by predictor labels with their decision threshold. Bubbles illustrate the final distribution of classes in a leaf node, sized by number of observations. The majority class determines the classification label.}
 \label{fig:dtree_viz}
 \end{figure}
 
@@ -461,7 +466,7 @@ Model predictions for the study area are generated by passing the FDS through th
 \label{fig:xgb_final_map}
 \end{figure}
 
-\subsection{Neural Networks}
+\subsection{Neural Networks} \label{ch5:ann}
 The original concepts behind \acrlong{ann}s (\acrshort{ann}s or just \acrshort{nn}s) come from simplified models of neuron activity in the brain \citep[p.\ 394]{hastie_elements_2009}. At a high level, multiple inputs are fed into neuron cells from many branches on one end, and given the right combination of those inputs, these cells will fire and propagate a signal to the next group of connected neurons.
 
 In neural networks, cells are represented by logistic units (Figure \ref{fig:nn_schematic}). Each unit acts like a logistic regression operation, where inputs are scaled by weights, and the linear sum of the weighted inputs are passed through an “activation function” to determine if the output is a 0 or a 1. As in logistic regression, the sigmoid function (Equation \ref{eq:sigmoid}) commonly appears in network architectures, but many additional activation functions like the \acrlong{relu} (\acrshort{relu}) are frequently used as well \citep{brownlee_gentle_2019}.
@@ -480,7 +485,7 @@ Each logistic unit performs the following operation:
     {\bf{a}} = g({\bf{z}}) = g({\bf{W^TX}})
 \end{equation}
 
-where $g$ is the activation function and $\bf{W}$ are the weights. For the first hidden layer, $\bf{X}$ will be the predictor values from the input layer as shown in Figure \ref{fig:nn_schematic}. For any additional hidden layers, $\bf{X}$ consists of the outputs of units from the preceding layer. Here, $\bf{z}$ is described in matrix notation but has the same form as Equation \ref{eq:logreg_form}. 
+where $g$ is the activation function and $\bf{W}$ are the weights. For the first hidden layer, $\bf{X}$ will be the predictor values from the input layer as shown in Figure \ref{fig:nn_schematic}. For any additional hidden layers, $\bf{X}$ consists of the outputs of units from the preceding layer. Here, $\bf{z}$ is described in matrix notation but has the same form as Equation \ref{eq:linreg_form}. 
 
 The cost function for a neural network takes on the form of a loss term and a complexity term \citep{ng_neural_2011}:
 
@@ -619,14 +624,196 @@ Figure \ref{fig:nn_auc} shows the macro average, micro average, and individual c
 
 The FDS was passed through the NN model to generate predictions for the southwestern NM study area as shown in Figure \ref{fig:nn_final_map}. Class 3 high-grade geothermal gradient regions to the southeast in the \citet{bielicki_hydrogeolgic_2015} PFA layer are well-captured by the NN model. The class 3 swath though the center of the AOI describes a broader, more continuous region of geothermal potential than suggested by the PFA map. Additional high-gradient patches unique to the NN map appear along the study area edges – in the southwest corner, eastern AOI extension, and to the northeast paralleling the Rio Grande river. The low-gradient zone to the north matches between the two maps, but most other class 0 areas in the \citeauthor{bielicki_hydrogeolgic_2015} map are not observed in the NN map. Interestingly, there appears to be greater overall similarity between the NN map in Figure \ref{fig:nn_final_map} and the XGB map in Figure \ref{fig:xgb_final_map} than with the PFA map.
 
+\newpage 
 \subsection{Uncertainty Analysis}
 
-The results obtained from the four supervised machine learning methods discussed so far all match the well data sets with at least an accuracy of 70\%, and in some cases in excess of 95\%. From a statistical perspective, each model accomplishes the task of learning from existing data reasonably well. And they all use those learnings to predict geothermal gradient classifications across the entire AOI. But presenting these results to an explorationist will invariably elicit two important questions: 1) Which of these maps is right? and 2) How can I integrate all four to better understand the region? 
+\begin{wrapfigure}{R}{0.45\textwidth}
+\centering
+\includegraphics[width=.4\textwidth]{templates/images/Flow-Uncertainty.png}
+\singlespacing
+\caption[Uncertainty analysis workflow]{Workflow for analyzing uncertainties in model results for geothermal gradient prediction across the southwestern NM study area.}
+\label{fig:uncertainty_flow}
+\end{wrapfigure}
 
-George Box's famous statement, “Essentially, all models are wrong, but some are useful” \citep{box_empirical_1987} effectively answers the first question. But knowing that none of the predicted maps is individually correct only strengthens the case for answering the second question. Reframing that query slightly, the following analysis serves to define: how wrong can the model results be? And also, where are predictions most or least certain for individual models and across all models?
+The results obtained from the four supervised machine learning methods discussed so far all match the well data sets with at least an accuracy of 70\%, and in some cases in excess of 95\%. From a statistical perspective, each model accomplishes the task of learning from existing data reasonably well. And they all use those learnings to predict geothermal gradient classifications across the entire AOI. But presenting these results to an explorationist will invariably elicit two important questions: 1) Which of these model results is the right one? and 2) What actions should I take based on these models? 
 
-\subsubsection{Bootstrap Estimation}
+George Box's famous statement, “Essentially, all models are wrong, but some are useful” \citep{box_empirical_1987} effectively answers the first question. But knowing that none of the prediction maps is individually correct falls short of providing impactful and actionable information for geothermal exploration decision-makers. Value lies in describing the sources of uncertainty and where those uncertainties manifest in a spatial prediction of geothermal gradient or other modeled attributes. To this end, the following analysis considers uncertainties from the three sources described in Section \ref{ch2:uncertainty} and illustrated in Figure \ref{fig:uncertainty_flow}: model type (structural), model calibration (parameter), and model input (measurement).
 
-\subsubsection{Information Entropy}
+\subsubsection{Classification Uncertainty Measures}
 
-\subsubsection{Bayesian Networks}
+Unlike standard regression problems that result in continuous variable predictions, classifiers are inherently limited to selecting among $n$ discrete classes. Statistical measures of variability in model results cannot be calculated by methods like standard deviation. For geospatial classifications, the most basic comparison between two maps is visual; plotting two maps side-by-side as in Figure \ref{fig:nn_final_map} can effectively communicate qualitative differences. Quantifying the uncertainty of categorical predictions based on multiple realizations defines a more difficult problem, with a variety of different statistical approaches to consider. Among these are performance measures based on the class assignments, including the percent correctly classified (accuracy), confusion matrix, ROC AUC, Kappa \citep{cohen_coefficient_1960}, and weighted Tau \citep{ma_tau_1995}. Other methods consider the probabilities that precede the final classification choice, including Brier score \citep{brier_verification_1950} and Shannon entropy \citep{shannon_mathematical_1948}. Rather than perform an exhaustive search through different metrics, this thesis follows the recommendation of \citep{beaudette_accuracy_2020} in characterizing classification uncertainty using entropy. Although the classic entropy calculation does not account for class similarity, it shows good discrimination ability for model results with low, medium, and high stand-out probability for the majority class \citep{beaudette_accuracy_2020}. Entropy can be calculated as shown in Equation \ref{eq:entropy} and normalized to a range of $(0, 1]$ as described here:
+
+\begin{equation}
+\label{eq:norm_entropy}
+    H = -\frac{1}{\log_2{(n)}}\sum_{i=1}^{n}{p_i \cdot \log_2{(p_i)}} = -\sum_{i=1}^{n}{p_i \cdot \log_n{(p_i)}}
+\end{equation}
+
+where $p_i$ represents the probability assigned to class label $i$. Entropy maps can be defined using the output probabilities of a single classification model or the results in an ensemble of predictions by first averaging across class probabilities for each map location.
+
+\subsubsection{Structural Uncertainty}
+
+The specific choice of classification algorithm implicitly applies constraints on the solution space for the problem. For example, logistic regression solutions assume there is a linear relationship between predictor variables and the log-odds of the response variable. And decision trees use hard thresholds that can create step-like model behavior. Figure \ref{fig:combined_maps} shows the four machine learning model results for the southwestern NM AOI. Not only do the models differ in how individual areas are classified, but the overall character of the predictions suggests each model has a signature predictive style.
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[width=\textwidth]{templates/images/Figure-All_Models.png}
+\caption[Combined machine learning results]{Machine learning results for WDS4 using A. logistic regression, B. a decision tree, C. XGBoost, and D. an artificial neural network. Results match those already shown in Figures \ref{fig:logreg_final_map}, \ref{fig:dtree_final_map}, \ref{fig:xgb_final_map}, and \ref{fig:nn_final_map}.}
+\label{fig:combined_maps}
+\end{figure}
+
+In order to examine the uncertainty introduced by structural aspects of the chosen machine learning models, the predicted class probabilities for each model output were averaged together to create an ensemble prediction of geothermal gradient classes. Figure \ref{fig:avg_final_map}A depicts the result when each map location is assigned to the dominant average class probability. Aspects of all four models in Figure \ref{fig:combined_maps} can be identified in this result, but the overall effect is a simpler model with a more spatially-conservative high-grade class 3 predictions. Also missing are many of the spurious high-gradient patches along the AOI boundaries and within the eastern and southern AOI extensions. The \citeauthor{bielicki_hydrogeolgic_2015} map (Figure \ref{fig:avg_final_map}B) depicts much more structure in geothermal gradient predictions, with a pock-marked appearance due to classification bulls-eye patterns.
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[width=\textwidth]{templates/images/Figure-Average_Gradient_Map_Joint.png}
+\caption[Probability-averaged prediction map]{Left: Geothermal gradient classification map based on the average class probabilities from the predictive models shown in Figure \ref{fig:combined_maps}. Results are based on WDS4. Right: geothermal gradient data layer from southwestern NM PFA study \protect\citep{bielicki_hydrogeolgic_2015}.}
+\label{fig:avg_final_map}
+\end{figure}
+
+Shannon entropy is calculated on this same averaged model data set using the class probabilities, not just the dominant class. The result is shown in Figure \ref{fig:structural_entropy_map}A. Normalized entropy values vary from 0 to 1, with high entropy defining locations where there is no clear differentiation between gradient class label probabilities. Regions colored red thus identify locations that are difficult for any model to classify based on inconclusive feature inputs, or alternatively, locations where the predicted class probabilities from the different models varied enough that, upon averaging, they converged to similar values and could not be disentangled.
+
+Figure \ref{fig:structural_entropy_map}B illustrates an alternative way of presenting these results. Regions of high entropy (over 0.7) are masked in dark gray because of the uncertainty in their classifications. All other points have a level of transparency that scales with entropy. Low uncertainties/entropy values are scarce, focused primarily in the southwest and in small patches to the central west and central east areas. High uncertainties track the borders between geothermal classifications to the north and southeast. In the Colorado Plateau region, they form a ring around an area of low-grade geothermal gradient (class 0). This highlights model inconsistencies on exactly where the class 0-class 1 boundary should appear based on trends in the input feature data.
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[width=.8\textwidth]{templates/images/Figure-Structural_Entropy_Map.png}
+\caption[Structural uncertainty map]{Structural uncertainty from choice of models, measured using Shannon entropy. Values are normalized to range from 0 for low entropy, low uncertainty (blue) to 1 for high entropy, high uncertainty (red).}
+\label{fig:structural_entropy_map}
+\end{figure}
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[width=.8\textwidth]{templates/images/Figure-Masked_Average_Gradient_Map.png}
+\caption[Structural uncertainty mask on prediction map]{Probability-averaged prediction map with uncertainty masking. Normalized entropy values (>0.7) are grayed out, all others determine transparency of the colored scatter plot. Transparency increases from none at entropy values close to 0 to full for entropy values close to 1. The background topographic raster has been removed to better visualize the transparency effect.}
+\label{fig:avg_gradient_masked_map}
+\end{figure}
+
+%\begin{figure}[!htp]
+%\centering
+%\includegraphics[width=\textwidth]{templates/images/Figure-Structural_Entropy_Combined_Maps.png}
+%\caption[Structural uncertainty map]{Structural uncertainty measured using Shannon entropy. A. Normalized entropy values calculated from the four predictive models shown in Figure \ref{fig:combined_maps}. B. Probability-averaged prediction map with uncertainty masking. Normalized entropy values (>0.7) are blacked out, all others set alphas on a gray layer mask.}
+%\label{fig:structural_entropy_map}
+%\end{figure}
+
+\subsubsection{Parameter Uncertainty}
+
+The fitting procedure for machine learning models like logistic regression and neural networks involves minimizing a cost function as updates are iteratively made to model parameters, e.g., feature weights. However, the final model solutions typically present these parameters as deterministic values with no uncertainty. The complexity of neural networks, and the potential for different parameterizations as randomness in techniques like dropout and mini-batching influence the training process, suggest such representations under-characterize the model space. By defining the range of uncertainty on model parameters, it is possible to generate many solutions from the same model that define an ensemble of valid predictions. Uncertainty estimates derived from this ensemble can introduce a measure of confidence in a model’s output, allowing the model to directly explain what it knows and, more importantly, what it doesn’t know in the solutions it produces.
+
+The Google DeepMind team introduced a method called “Bayes by Backprop” in 2015 where single-value weights are replaced by probability distributions in a neural network architecture \citep{blundell_weight_2015}. Making the simplifying assumption that the weight distributions are Gaussian, each weight parameter in a standard NN layer is replaced by a mean and a standard deviation in a probabilistic layer. A fully-trained \acrlong{bnn} (\acrshort{bnn}) samples from the weight distributions for just-in-time determination of weight values as data is fed through to produce a prediction. Therefore, each prediction of the BNN varies depending on the selected weights, and running the network many times on the same data set will produce a set of different results. An analysis of the variation in this solution ensemble can characterize how parameter uncertainty impacts BNN classification performance.
+
+At a fundamental level, BNNs operate using Bayes theorem for training the network \citep{webster_probabilistic_2021}:
+
+\begin{equation}
+    \label{eq:bayesrule}
+    P({\bf w} \vert D) = \frac{P(D \vert {\bf w}) \cdot P({\bf w})}{P(D)}
+\end{equation}
+
+Where ${\bf w}$ are the model weights, $D$ is the observed data. $P({\bf w})$ define the \textit{priors}, or the distributions assigned to the weights before seeing $D$. $P(D \vert {\bf w})$ defines the likelihood of $D$ given $w$. $P({\bf w} \vert D)$ are the \textit{posteriors} or the distributions after taking $D$ into account.
+
+In practice, BNNs use a Variational Bayes method, which approximates $P({\bf w} \vert D)$ with a variational posterior, $q({\bf w} \vert \theta)$. The desired difference between these two functions is zero (perfect approximation), so this defines the basis of a loss function measured using the Kullback-Leibler divergence \citep{webster_probabilistic_2021}:
+
+\begin{equation}
+    \label{eq:bnn_loss}
+    \begin{aligned}
+    D_{KL}\left(q({\bf w} \vert \theta)\ \vert\vert\ P({\bf w} \vert D)\right) &= \int{q({\bf w} \vert \theta) \log \left({\frac{q({\bf w} \vert \theta)}{P({\bf w} \vert D)}}\right) d{\bf w}} \\
+    &= \log P(D) + D_{KL}\left(q({\bf w} \vert \theta)\ \vert\vert\ P({\bf w})\right) \\ 
+    &\qquad- \mathbf{E}_{q({\bf w} \vert \theta)}\left[\log P(D \vert {\bf w})\right]
+    \end{aligned}
+\end{equation}
+Dropping constant terms and treating this as an objective to minimize \citep{blundell_weight_2015}:
+\begin{equation}
+    \label{eq:bnn_objective}
+    J(\Theta) = D_{KL}\left(q({\bf w} \vert \theta)\ \vert\vert\ P({\bf w})\right) - \mathbf{E}_{q({\bf w} \vert \theta)}\left[\log P(D \vert {\bf w})\right]
+\end{equation}
+
+This two-term objective describes a trade-off between the complexity as controlled by deviation from the prior ($P({\bf w})$) and the negative log likelihood term measuring the fit to the data.
+
+The TensorFlow Probability package was used to transform the NN from Section \ref{ch5:ann} into a BNN for uncertainty estimation \citep{dillon_tensorflow_2017}.  Given the sparsity of training data available and the multiplier effect that probabilistic layers have on the number of trainable parameters in a BNN, only the second hidden layer was converted to use the TensorFlow \textit{DenseVariational} layer (Figures \ref{fig:bnn_text_structure} and \ref{fig:bnn_dot_structure}). Standard normal ($N(0,1)$) distributions are used as priors for the layer nodes. The same hyperparameter values determined while tuning the deterministic neural network for each data set (Table \ref{tab:bnn_metrics}) were used with the BNNs with one exception: the number of epochs was increased by a factor of 3-4. Figure \ref{fig:bnn_loss} shows the training loss and AUC curves for WDS4, which justify this larger number of epochs required for training. Table \ref{tab:bnn_metrics} notes the final accuracy and AUC scores for the BNNs calculated from a single predictive run on the respective test data subsets.
+
+\begin{figure}[!htp]
+\centering
+\begin{minipage}[b][][b]{.35\linewidth}
+    \includegraphics[width=\linewidth]{templates/images/Figure-TF_BNN_Structure.png}
+    \caption[Bayesian neural network structural flow]{Structural flow chart for the TensorFlow-based Bayesian network.}
+    \label{fig:bnn_text_structure}
+\end{minipage}
+\hfill
+\begin{minipage}[b][][b]{.61\linewidth}
+    \includegraphics[width=\linewidth]{templates/images/Figure-BNN.png}
+    \caption[Bayesian neural network structural schematic]{Schematic diagram of the Bayesian neural network. Not shown are the dropout operations after each hidden layer.}
+    \label{fig:bnn_dot_structure}
+\end{minipage}
+\end{figure}
+
+\begin{table}[htp]
+\centering
+\begin{tabular}{l|c|c|c|}
+\cline{2-4}
+                                      & WDS   & WDS4  & WDS8  \\ \hline
+\multicolumn{1}{|l|}{learning rate}   & 0.005 & 0.010 & 0.010 \\ \hline
+\multicolumn{1}{|l|}{lambda ($\lambda$)} & 1E-04 & 2E-04 & 1E-04 \\ \hline
+\multicolumn{1}{|l|}{batch size}      & 50    & 100   & 150   \\ \hline
+\multicolumn{1}{|l|}{dropout rate}    & 0.3   & 0.1   & 0.1   \\ \hline
+\multicolumn{1}{|l|}{epochs}          & 100   & 300   & 600   \\ \hline
+\multicolumn{1}{|l|}{Accuracy$_{train}$} & 0.516 & 0.867 & 0.902 \\ \hline
+\multicolumn{1}{|l|}{Accuracy$_{test}$}  & 0.483 & 0.869 & 0.894 \\ \hline
+\multicolumn{1}{|l|}{AUC$_{train}$}      & 0.798 & 0.976 & 0.990 \\ \hline
+\multicolumn{1}{|l|}{AUC$_{test}$}       & 0.762 & 0.961 & 0.980 \\ \hline
+\end{tabular}
+\singlespacing
+\caption[Bayesian neural network single-run metrics]{BNN hyperparameters used for training and test results for each data set. Accuracy and AUC metrics are split into train (in-sample) and test (out-of-sample) values. Results reflect a single prediction from the BNNs and will vary due to the probabilistic aspect of the model architecture.}
+\label{tab:bnn_metrics}
+\end{table}
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[width=\textwidth]{templates/images/Figure-BNN_Loss_AUC_WDS4.png}
+\caption[Bayesian neural network training loss]{BNN training results as a function of epoch count for WDS4. Calculated loss (Left) and AUC (Right) for the training (blue) and validation (green) subsets show training convergence by $\approx 300$ epochs. The probabilistic character of the BNN causes the AUC curve to appear noisier than for the deterministic NN.}
+\label{fig:bnn_loss}
+\end{figure}
+
+Single BNN passes can be evaluated the same way as the deterministic NN using a confusion matrix and ROC curves (Figures \ref{fig:bnn_confusion_matrix}, \ref{fig:bnn_auc}).
+
+\begin{figure}[!htp]
+\centering
+\begin{minipage}[b][][b]{.45\textwidth}
+    \includegraphics[width=\linewidth]{templates/images/Figure-BNN-ConfusionMatrix_WDS4.png}
+    \caption[Bayesian neural network confusion matrix]{Confusion matrix for the tuned BNN model trained on WDS4.}
+    \label{fig:bnn_confusion_matrix}
+\end{minipage}
+\hfill
+\begin{minipage}[b][][b]{.51\textwidth}
+    \includegraphics[width=\linewidth]{templates/images/Figure-BNN-AUC_WDS4.png}
+    \caption[Bayesian neural network ROC curves]{ROC curves for tuned BNN model trained on WDS4.}
+    \label{fig:bnn_auc}
+\end{minipage}
+\end{figure}
+
+Running the BNN multiple times will produce a collection of different results. Figure XX shows the range of class label probabilities after predicting the classification of 3 different well locations 100 times using a BNN trained on the WDS4 training subset. Here, the relationship between entropy values and the overlap in class label probabilities is apparent; a low entropy scenario (Figure \ref{fig:bnn_class_pdfs}A) has strong stand-out between the predicted class label and others, while high entropy situations (Figure \ref{fig:bnn_class_pdfs}C) have less certainty on the class label assignment.
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[width=\textwidth]{templates/images/Figure-BNN_100trials_WDS4.png}
+\caption[Bayesian neural network class pdfs]{Example class label probability density functions for A. well record 34, B. well record 20, and C well record 35 from WDS4. Distributions are constructed from 100 passes through the WDS4 BNN. Entropy values scale with label distribution entanglement. The predicted label is the one with the highest mean probability: A. High Gradient, B. Low Gradient, C Medium Gradient.}
+\label{fig:bnn_class_pdfs}
+\end{figure}
+
+After re-training the BNN on the full WDS4 data set, predictions for the entire AOI were generated 1000 times. The class probabilities from these 1000 realizations were averaged by class for each point location, and the maximum probability class was selected as the predicted label (Figure \ref{fig:bnn_pred_entropy_maps}A). Likewise, entropy values for each map location are shown in Figure \ref{fig:bnn_pred_entropy_maps}B. 
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[width=\textwidth]{templates/images/Figure-BNN_MeanGrad_Entropy_PairMap.png}
+\caption[BNN prediction and entropy maps]{BNN results after 1000 runs of the predictive model for WDS4. A. Geothermal gradient classification map. B. Parameter uncertainty measured using Shannon entropy, normalized to range from 0 for low entropy, low uncertainty (blue) to 1 for high entropy, high uncertainty (red).}
+\label{fig:bnn_pred_entropy_maps}
+\end{figure}
+
+Figure \ref{fig:bnn_masked_pred_map} illustrates the geothermal gradient prediction map with parameter uncertainty as a layer mask and control on transparency. Concentrated areas of high uncertainty appear to the southeast in the RGR province, and to the north within the CP and at the RGR-GP province boundary (Figure \ref{fig:bnn_masked_pred_map}). Overall there appears to be less uncertainty in the results for the BNN than observed in the structural uncertainty analysis across the four model architectures (Figure \ref{fig:avg_gradient_masked_map}).  
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[width=\textwidth]{templates/images/Figure-BNN_Entropy_Province_PairMap.png}
+\caption[Parameter uncertainty mask on BNN prediction map]{Caption}
+\label{fig:bnn_masked_pred_map}
+\end{figure}
+
+\subsubsection{Measurement Uncertainty}
